--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,6 @@ jobs:
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'profelecghibli'  # double check this matches your App Service name
+          app-name: 'ghibliwebapp'  # double check this matches your App Service name
           slot-name: 'Production'
           package: app.zip
